[fix] video style on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ html, body {
   font-family: 'Alegreya Sans', sans-serif;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 @media(max-width:768px) {
   #header {
     text-align: center;
@@ -30,6 +35,13 @@ html, body {
   padding-right: 50px;
   font-family: 'Alegreya Sans', sans-serif;
 }
+
+@media(max-width:768px) {
+  .navbar {
+    padding-right: 0px;
+  }
+}
+
 
 .navbar .nav .nav-item .nav-link {
   color: #fff;
@@ -146,12 +158,12 @@ video {
 }
 
 .card-img-top {
-  height: 285px;
-  width: 485px;
+  height: 100%;
+  width: 100%;
 }
 
 .card-block {
-  width: 485px;
+  width: 100%;
   text-align: center;
   margin-bottom: 50px;
 }
@@ -165,7 +177,7 @@ video {
   top: 0;
   left: 0;
   background-color: rgba(0,0,0,0.8);
-  width: 485px;
+  width: 100%;
   height: 285px;
   background-image: url('../img/link.png');
   background-size: 30px;
@@ -368,6 +380,7 @@ video {
   text-align: center;
   padding: 50px;
 }
+
 
 #skills .fa {
   color: #00CED1;
